# packages/server/internal/api/gen.go
@@ -1,4 +1,4 @@
-// package api provides primitives to interact with the openapi HTTP API.
+// Package api provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.7.0 DO NOT EDIT.
 package api
@@ -116,8 +116,8 @@ type ServerInterface interface {
 	// (POST /api/v1/game/register)
 	PostApiV1GameRegister(c *gin.Context)
 
-	// (GET /api/v1/game/sse)
-	GetApiV1GameSse(c *gin.Context)
+	// (GET /api/v1/game/sse/{sessionId})
+	GetApiV1GameSseSessionId(c *gin.Context, sessionId string)
 
 	// (POST /api/v1/game/start)
 	PostApiV1GameStart(c *gin.Context)
@@ -167,8 +167,20 @@ func (siw *ServerInterfaceWrapper) PostApiV1GameRegister(c *gin.Context) {
 	siw.Handler.PostApiV1GameRegister(c)
 }
 
-// GetApiV1GameSse operation middleware
-func (siw *ServerInterfaceWrapper) GetApiV1GameSse(c *gin.Context) {
+// GetApiV1GameSseSessionId operation middleware
+func (siw *ServerInterfaceWrapper) GetApiV1GameSseSessionId(c *gin.Context) {
+
+	var err error
+	_ = err
+
+	// ------------- Path parameter "sessionId" -------------
+	var sessionId string
+
+	err = runtime.BindStyledParameterWithOptions("simple", "sessionId", c.Param("sessionId"), &sessionId, runtime.BindStyledParameterOptions{ParamLocation: runtime.ParamLocationPath, Explode: false, Required: true, Type: "string", Format: "uuid"})
+	if err != nil {
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter sessionId: %w", err), http.StatusBadRequest)
+		return
+	}
 
 	for _, middleware := range siw.HandlerMiddlewares {
 		middleware(c)
@@ -177,7 +189,7 @@ func (siw *ServerInterfaceWrapper) GetApiV1GameSse(c *gin.Context) {
 		}
 	}
 
-	siw.Handler.GetApiV1GameSse(c)
+	siw.Handler.GetApiV1GameSseSessionId(c, sessionId)
 }
 
 // PostApiV1GameStart operation middleware
@@ -283,7 +295,7 @@ func RegisterHandlersWithOptions(router gin.IRouter, si ServerInterface, options
 
 	router.POST(options.BaseURL+"/api/v1/game/continue", wrapper.PostApiV1GameContinue)
 	router.POST(options.BaseURL+"/api/v1/game/register", wrapper.PostApiV1GameRegister)
-	router.GET(options.BaseURL+"/api/v1/game/sse", wrapper.GetApiV1GameSse)
+	router.GET(options.BaseURL+"/api/v1/game/sse/:sessionId", wrapper.GetApiV1GameSseSessionId)
 	router.POST(options.BaseURL+"/api/v1/game/start", wrapper.PostApiV1GameStart)
 	router.POST(options.BaseURL+"/api/v1/game/submit", wrapper.PostApiV1GameSubmit)
 	router.GET(options.BaseURL+"/api/v1/items/me", wrapper.GetApiV1ItemsMe)
